--- a/react-vite/src/components/ChannelPopupModal/ChannelPopup.css
+++ b/react-vite/src/components/ChannelPopupModal/ChannelPopup.css
@@ -4,7 +4,8 @@
     overflow: hidden;
     position: relative;
     z-index: 50;
-    color: var(--color-font)
+    color: var(--color-font);
+    background-color: var(--color-background)
 }
 
 .channel-popup-header {
@@ -82,6 +83,10 @@
 
 .channel-popup-details-border {
     border-bottom: 1px solid #ddd;
+}
+
+.channel-popup-details-border-last {
+    border-bottom: none;
 }
 
 .channel-popup-details {
@@ -171,7 +176,7 @@
 }
 
 .channel-popup-huddle-buttons>button:hover {
-    background-color: #F6F6F6
+    background-color: var(--color-hover)
 }
 
 .channel-popup-delete-button {
