--- a/react-vite/src/components/InnerNavbar/InnerNavbar.css
+++ b/react-vite/src/components/InnerNavbar/InnerNavbar.css
@@ -1,6 +1,6 @@
 .inner-navbar-wrapper {
-    width: 22%;
-    max-width: 270px;
+    width: 25%;
+    max-width: 330px;
     height: 100vh;
     min-width: 230px;
     box-sizing: border-box;
